--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "indecision-app",
+  "name": "expensify",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config=jest.config.json",
     "serve": "live-server public/",
-    "build": "webpack",
-    "dev-server": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode development",
+    "dev-server": "webpack-dev-server --open",
     "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
   },
   "author": "Apoorv Yadav",
@@ -19,19 +19,35 @@
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
+    "@babel/runtime": "^7.0.0",
     "babel-cli": "^6.24.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "^4.2.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16.1": "^1.6.3",
+    "enzyme-to-json": "^3.5.0",
+    "jest": "^26.4.2",
+    "moment": "^2.18.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
+    "raf": "^3.4.1",
     "react": "^16.13.1",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-test-renderer": "^16.13.1",
+    "react-with-direction": "^1.3.1",
+    "redux": "^4.0.5",
     "sass-loader": "^10.0.1",
     "style-loader": "^1.2.1",
+    "uuid": "^8.3.0",
     "validator": "^13.1.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
