--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest --config=jest.config.json",
     "serve": "live-server public/",
-    "build": "webpack --mode development",
+    "build:dev": "webpack --mode development",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server --open",
     "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
   },
@@ -31,6 +32,7 @@
     "enzyme-adapter-react-16.1": "^1.6.3",
     "enzyme-to-json": "^3.5.0",
     "jest": "^26.4.2",
+    "mini-css-extract-plugin": "^0.11.1",
     "moment": "^2.18.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
