--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:dev": "webpack --mode development",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server --open",
-    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run build:prod"
   },
   "author": "Apoorv Yadav",
   "license": "ISC",
@@ -31,6 +33,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16.1": "^1.6.3",
     "enzyme-to-json": "^3.5.0",
+    "express": "^4.17.1",
     "jest": "^26.4.2",
     "mini-css-extract-plugin": "^0.11.1",
     "moment": "^2.18.1",
