--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-/node_modules
-/src/playground
-/public/bundle.js
-/public/bundle.js.map
-/public/styles.css
-/public/styles.css.map
+/node_modules/
+/src/playground/
+/public/dist/
