--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   "author": "Apoorv Yadav",
   "license": "ISC",
   "devDependencies": {
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.5.0",
+    "jest": "^26.4.2",
+    "react-test-renderer": "^16.13.1",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@babel/core": "^7.11.4",
@@ -30,11 +35,8 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "^4.2.2",
-    "enzyme": "^3.11.0",
     "enzyme-adapter-react-16.1": "^1.6.3",
-    "enzyme-to-json": "^3.5.0",
     "express": "^4.17.1",
-    "jest": "^26.4.2",
     "mini-css-extract-plugin": "^0.11.1",
     "moment": "^2.18.1",
     "node-sass": "^4.14.1",
@@ -47,7 +49,6 @@
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-test-renderer": "^16.13.1",
     "react-with-direction": "^1.3.1",
     "redux": "^4.0.5",
     "sass-loader": "^10.0.1",
@@ -55,7 +56,6 @@
     "uuid": "^8.3.0",
     "validator": "^13.1.1",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^3.3.12"
   }
 }
