--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "serve": "live-server public/",
     "build:dev": "webpack --mode development",
     "build:prod": "webpack -p --env production",
@@ -16,10 +16,12 @@
   "author": "Apoorv Yadav",
   "license": "ISC",
   "devDependencies": {
-    "live-server": "^1.2.1",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.5.0",
     "jest": "^26.4.2",
+    "live-server": "^1.2.1",
     "react-test-renderer": "^16.13.1",
     "webpack-dev-server": "^3.11.0"
   },
@@ -37,6 +39,7 @@
     "css-loader": "^4.2.2",
     "enzyme-adapter-react-16.1": "^1.6.3",
     "express": "^4.17.1",
+    "firebase": "^7.20.0",
     "mini-css-extract-plugin": "^0.11.1",
     "moment": "^2.18.1",
     "node-sass": "^4.14.1",
@@ -52,6 +55,8 @@
     "react-router-dom": "^5.2.0",
     "react-with-direction": "^1.3.1",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^10.0.1",
     "style-loader": "^1.2.1",
     "uuid": "^8.3.0",
