--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "enzyme-adapter-react-16.1": "^1.6.3",
     "express": "^4.17.1",
     "firebase": "^7.20.0",
+    "history": "^4.10.1",
     "mini-css-extract-plugin": "^0.11.1",
     "moment": "^2.18.1",
     "node-sass": "^4.14.1",
