--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.5.0",
+    "file-loader": "^6.1.0",
     "jest": "^26.4.2",
     "live-server": "^1.2.1",
     "react-test-renderer": "^16.13.1",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.11.4",
+    "@babel/polyfill": "^7.11.5",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@babel/runtime": "^7.0.0",
